<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Profile"
    android:background="@drawable/fon">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Профиль"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center|bottom"/>
        </FrameLayout>
        <FrameLayout

            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/liner_bord">
                <EditText
                    android:id="@+id/name"
                    android:hint="@string/prof_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#B3000000"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="#1C1515"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/fam"
                    android:hint="@string/prof_fam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#B3000000"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="#1C1515"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/otch"
                    android:hint="@string/prof_otch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#B3000000"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="#1C1515"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/date"
                    android:hint="@string/prof_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#B3000000"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="#1C1515"
                    android:layout_weight="2"

                    />
                <EditText
                    android:id="@+id/znak"
                    android:hint="@string/prof_znak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#B3000000"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="#1C1515"
                    android:layout_weight="1"

                    />
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbord"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="80dp"
                android:textColor="@color/white"
                android:text="Сохранить"
                android:textSize="20dp"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbord"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="80dp"
                android:textColor="@color/white"
                android:text="Сбросить"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:layout_marginTop="120dp"/>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>